# plantao360

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260624_002_add_shift_extra_duration.py  20260624_init_database.py  20260628_003_runtime_alignment.py  20260630_004_doctor_specialty_active.py  20260701_005_doctor_phone_email_type.py  20260701_006_shift_unique_constraint_fix.py  20260708_007_create_users_table.py  20260715_008_drop_payroll.py  sprint9_add_payroll.py
backend/app/api/: app.py  dependencies.py  exception_handlers.py
backend/app/api/routes/: auth.py  (+12 more)
backend/app/audit/: __init__.py  context.py  events.py  models.py  service.py
backend/app/common/: __init__.py  api_response.py  clock.py  context.py  enums.py  events.py  filters.py  identifiers.py  openapi.py  pagination.py  responses.py  result.py  sorting.py  types.py
backend/app/core/: config.py  constants.py  features.py  lifespan.py  logging.py  runtime.py
backend/app/database/: __init__.py  base.py  session.py  unit_of_work.py
backend/app/events/: __init__.py  event_dispatcher.py
backend/app/mappers/: __init__.py  base_mapper.py  doctor_mapper.py  period_mapper.py  shift_mapper.py
backend/app/models/: __init__.py  base_mixins.py  coverage_snapshot.py  doctor.py  financial_fact.py  financial_snapshot.py  payroll.py  period.py  shift.py  shift_extra.py  shift_part.py  user.py
backend/app/observability/: __init__.py  instrumentation.py  metrics.py  tracing.py
backend/app/repositories/: coverage_snapshot_repository.py  doctor_repository.py  extra_repository.py  financial_fact_repository.py  financial_snapshot_repository.py  payroll_repository.py  period_repository.py  shift_part_repository.py  shift_repository.py  user_repository.py
backend/app/seed/: __init__.py  seed_data.py
backend/app/services/: assignment_service.py  coverage_service.py  dashboard_service.py  doctor_service.py  extra_service.py  payroll_service.py  period_service.py  query_service.py  shift_lifecycle_service.py  shift_service.py  user_service.py  workspace_service.py
backend/app/tests/: conftest.py  test_app.py  test_health.py
backend/app/use_cases/: __init__.py
backend/app/validators/: __init__.py  audit_decorator.py  base_validator.py  doctor_validator.py  payroll_governance_validator.py  period_validator.py  shift_validator.py
backend/architecture/: manifest_schema.yaml
backend/architecture/manifests/: assignment.yaml  doctor.yaml  extra.yaml  payroll.yaml  period.yaml  shift.yaml
backend/architecture_rules/: audit.yaml  dto.yaml  events.yaml  mapper.yaml  repository.yaml  router.yaml  service.yaml  tests.yaml  validator.yaml
backend/scripts/: audit_check.py  fix_competency_dates.py  fix_period6.py  full_audit.py  normalize_all_periods.py  test_lifecycle.py
backend/templates/golden-module/: config.json
(+834 files in other folders)
